# nomad-crystallm

./: 404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: actions.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_crystallm/: utils.py
src/nomad_crystallm/actions/: __init__.py  activities.py  llm.py  shared.py  utils.py  workflow.py
src/nomad_crystallm/actions/bandgap_predictor/: __init__.py  activities.py  llm.py  shared.py  workflow.py
src/nomad_crystallm/actions/crystallm_bandgap_predictor/: __init__.py  activities.py  shared.py  workflow.py
src/nomad_crystallm/actions/inference/: __init__.py  activities.py  models.py  utils.py  workflow.py
src/nomad_crystallm/apis/: __init__.py  crystallm.py
src/nomad_crystallm/schemas/: __init__.py  schema.py
src/nomad_crystallm/workflows/: __init__.py  activities.py  llm.py  shared.py  workflow.py
tests/: conftest.py  test_schemas.py
tests/data/: inference_result.archive.yaml  sample_1.cif
tutorial/: tutorial.html
